ast/src/snapshots/ast__parser__tests__conditional_snapshots@if_else_if_else_empty.snap
---
source: ast/src/parser.rs
expression: "parse_expr(\"if true { } else if false { } else { }\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                    location: Location(
                        13..17,
                    ),
                },
            ),
            block: Block {
                statements: [
                    If(
                        IfCondition {
                            cases: [],
                            location: Location(
                                20..58,
                            ),
                        },
                    ),
                ],
                location: Location(
                    18..60,
                ),
            },
            location: Location(
                0..60,
            ),
        },
    ),
]
