ast/src/snapshots/ast__parser__tests__conditional_snapshots@inequality_empty.snap
---
source: ast/src/parser.rs
expression: "parse_expr(\"if a != 1 { }\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private,
            ),
            external: false,
            name: Identifier {
                name: "main",
            },
            parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                },
            ),
            block: Block {
                statements: [
                    If(
                        IfCondition {
                            cases: [
                                Condition {
                                    condition: Some(
                                        Call(
                                            Call {
                                                callee: Some(
                                                    Variable(
                                                        Variable {
                                                            name: Identifier {
                                                                name: "a",
                                                            },
                                                        },
                                                    ),
                                                ),
                                                name: Identifier {
                                                    name: "!=",
                                                },
                                                arguments: [
                                                    Literal(
                                                        Int(
                                                            IntLiteral {
                                                                value: 1,
                                                            },
                                                        ),
                                                    ),
                                                ],
                                            },
                                        ),
                                    ),
                                    block: Block {
                                        statements: [],
                                    },
                                },
                            ],
                        },
                    ),
                ],
            },
        },
    ),
]
