ast/src/snapshots/ast__parser__tests__conditional_snapshots@unless_else_empty.snap
---
source: ast/src/parser.rs
expression: "parse_expr(\"unless true { } else { }\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                    location: Location(
                        13..17,
                    ),
                },
            ),
            block: Block {
                statements: [
                    Expression(
                        Unless(
                            UnlessCondition {
                                cases: [],
                                location: Location(
                                    20..44,
                                ),
                            },
                        ),
                    ),
                ],
                location: Location(
                    18..46,
                ),
            },
            location: Location(
                0..46,
            ),
        },
    ),
]
