ast/src/snapshots/ast__parser__tests__conditional_snapshots@unless_empty.snap
---
source: ast/src/parser.rs
expression: "parse_expr(\"unless true { }\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            type_parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                    location: Location(
                        13..17,
                    ),
                },
            ),
            block: Block {
                statements: [
                    Unless(
                        UnlessCondition {
                            cases: [],
                            location: Location(
                                20..35,
                            ),
                        },
                    ),
                ],
                location: Location(
                    18..37,
                ),
            },
            location: Location(
                0..37,
            ),
        },
    ),
]
