ast/src/snapshots/ast__parser__tests__conditional_snapshots@unless_statement.snap
---
source: ast/src/parser.rs
expression: "parse_expr(\"unless true { let a = 0 }\")"
---
[
    FunctionDefinition(
        FunctionDefinition {
            visibility: Private(
                Private {
                    location: Location(
                        0..2,
                    ),
                },
            ),
            external: false,
            name: Identifier {
                name: "main",
                location: Location(
                    3..7,
                ),
            },
            parameters: [],
            return_type: Scalar(
                ScalarType {
                    name: "void",
                    location: Location(
                        13..17,
                    ),
                },
            ),
            block: Block {
                statements: [
                    Expression(
                        Unless(
                            UnlessCondition {
                                cases: [],
                                location: Location(
                                    20..45,
                                ),
                            },
                        ),
                    ),
                ],
                location: Location(
                    18..47,
                ),
            },
            location: Location(
                0..47,
            ),
        },
    ),
]
