ast/src/snapshots/ast__parser__tests__enum_snapshots@empty.snap
---
source: ast/src/parser.rs
expression: "parse(\"enum Foo {}\")"
---
[
    TypeDefinition(
        Enum(
            EnumDefinition {
                name: Identifier {
                    name: "Foo",
                    location: Location(
                        5..8,
                    ),
                },
                cases: [],
                location: Location(
                    0..11,
                ),
            },
        ),
    ),
]
